--- a/Test118/res/layout/uploaded_image.xml
+++ b/Test118/res/layout/uploaded_image.xml
@@ -1,19 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-    
-	<ImageView
-	    android:id="@+id/imgView"
-	    android:layout_width="fill_parent"
-	    android:layout_height="wrap_content"
-	    android:layout_above="@+id/button2"
-	    android:layout_alignParentTop="true"
-	    android:layout_weight="1" >
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="15dip" >
 
-</ImageView>
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="left"
+        android:orientation="horizontal" >
 
-	<Button
+        <TextView
+            android:id="@+id/progress_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:padding="2dip"
+            android:text="Choose Picture >"
+            android:textColor="#fff"
+            android:textSize="15dip" />
+
+        <TextView
+            android:id="@+id/progress_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:padding="2dip"
+            android:text="Write Message >"
+            android:textColor="#888"
+            android:textSize="15dip" />
+
+        <TextView
+            android:id="@+id/progress_3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:padding="2dip"
+            android:text="Done"
+            android:textColor="#888"
+            android:textSize="15dip" />
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/imgView"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/buttons"
+        android:layout_alignParentTop="true"
+        android:layout_weight="2" >
+    </ImageView>
+
+    <!--
+     	<Button
 	    android:id="@+id/button2"
 	    android:layout_width="100dp"
 	    android:layout_height="wrap_content"
@@ -32,5 +71,33 @@
 	    android:layout_marginBottom="16dp"
 	    android:layout_marginLeft="40dp"
 	    android:text="Back" />
+    -->
 
-</RelativeLayout>
+    <LinearLayout
+        android:id="@+id/buttons"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:gravity="bottom"
+        android:orientation="horizontal" >
+
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:drawableLeft="@drawable/left_arrow"
+            android:enabled="true"
+            android:text="Back" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:drawableRight="@drawable/right_arrow"
+            android:text="Next" />
+    </LinearLayout>
+
+</LinearLayout>
