Moved some classes to new packages to make the project neater, and did some minor changes.

--- a/Test118/res/layout/decode_password.xml
+++ b/Test118/res/layout/decode_password.xml
@@ -56,7 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView1"
         android:layout_below="@+id/textView1"
-        android:text="Now you need to enter the password to extract from the picture. The password should be exactly the same as the embedding password."
+        android:text="To extract messages, you are supposed to enter the password, which is the same as the embedding password. The algorithm currently used to extract is F5."
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <TextView
